--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -218,7 +218,7 @@ a:focus {
 .hero-area {
   background: url(../images/hero-area.jpg) no-repeat;
   background-size: cover;
-  background-position: center bottom;
+  background-position: center center;
   color: #fff;
   overflow: hidden;
   padding: 90px 0;
